--- a/client/app/pages/login/login.template.html
+++ b/client/app/pages/login/login.template.html
@@ -15,4 +15,5 @@
         <!--submit-->
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
+    <a  routerLink="/signup">sign up here</a>
 </div>
